# agents-course

./: pyproject.toml
.devcontainer/: devcontainer.json
notebooks/bonus-unit1/: gemma-SFT-thinking-function_call.ipynb
notebooks/unit2/smolagents/: code_agents.ipynb  retrieval_agents.ipynb
