[project]
name = "agents-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.0.2",
    "helium>=5.1.1",
    "huggingface-hub[cli]>=0.31.2",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "litellm>=1.70.4",
    "pillow>=11.2.1",
    "pip>=25.1.1",
    "smolagents>=1.16.1",
]
